const-tests/non_ascii_escape_char.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/non_ascii_escape_char.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '☃',
5 | |     ['\\', '[', ']', '"', '\0', '\n', '\r', '\t'],
6 | |     [('\n', "n"), ('\r', "r"), ('\0', "0"), ('\t', "t")],
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: escape_char.is_ascii()
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |         assert!(escape_char.is_ascii());
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
